chat bubble alignment fixed
Note: This requires both question and response or else the alignment will get messed up

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,11 +4,13 @@
 body {
   background-color: #6C88B7;
 }
+
 body #chatbot-container {
   width: 90%;
   margin: auto auto 2vh;
   box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
 body #chatbot-container .header-text {
   background-color: #4052B6;
   color: #FFFFFF;
@@ -17,27 +19,32 @@ body #chatbot-container .header-text {
   border-radius: 7px 7px 0px 0px;
   /* TL TR BR BL*/
 }
+
 body #chatbot-container .chat-background {
-  display: block;
   height: 450px;
   background-color: #F5F8FB;
 }
+
 body #chatbot-container .chatlog {
   width: 100%;
   height: 100%;
   padding: 20px 0px 20px 20px;
+  display: inline-block;
   /*T R B L*/
 }
+
 body #chatbot-container .bot-avatar {
   width: 60px;
   height: 60px;
   border-radius: 50%;
+  /*margin: 10px 0px 0px 10px;*/
   display: inline-block;
 }
+
 body #chatbot-container .bot-message {
   background-color: #FFFFFF;
   padding: 15px;
-  margin: 0px 0px 20px 20px;
+  margin: 0px 0px 0px 10px;
   /*T R B L*/
   font-size: 18px;
   border-radius: 15px 15px 15px 0px;
@@ -45,21 +52,32 @@ body #chatbot-container .bot-message {
   box-shadow: 1px 3px 1px 0 rgba(0, 0, 0, 0.19);
   display: inline-block;
 }
-body #chatbot-container .user {
-  float: right;
+
+body #chatbot-container .bot {
+    clear:right;
+    margin: 20px 0 0 0;
+    /*T R B L*/
 }
+
+body #chatbot-container .user {
+    clear:left;
+    margin: 20px 0 0 0;
+    float: right;
+}
+
 body #chatbot-container .user-avatar {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   display: inline-block;
-  margin: 0px 20px 0px 0px;
+  /*margin: 10px 20px 0px 0px;*/
   /*T R B L*/
 }
+
 body #chatbot-container .user-message {
   background-color: #FFFFFF;
   padding: 15px;
-  margin: 0px 20px 20px 0px;
+  margin: 0px 10px 0px 0px;
   /*T R B L*/
   font-size: 18px;
   border-radius: 15px 15px 0px 15px;
@@ -67,6 +85,7 @@ body #chatbot-container .user-message {
   box-shadow: 1px 3px 1px 0 rgba(0, 0, 0, 0.19);
   display: inline-block;
 }
+
 body #chatbot-container .text-entry {
   background-color: #FFFFFF;
   color: #CBCED5;
@@ -74,6 +93,7 @@ body #chatbot-container .text-entry {
   border-radius: 0px 0px 7px 7px;
   /* TL TR BR BL*/
 }
+
 body #chatbot-container .enter-button {
   background-color: #FFFFFF;
   color: #CBCED5;
@@ -81,6 +101,7 @@ body #chatbot-container .enter-button {
   border-radius: 0px 0px 7px 7px;
   /* TL TR BR BL*/
 }
+
 body #chatbot-container .clearfix {
   clear: both;
 }
